--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
+    "react-router-dom": "^7.9.4",
     "tailwindcss": "^4.1.14",
     "vite": "^7.1.7"
   }
