--- a/client/.env.production
+++ b/client/.env.production
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=https://your-backend-app.railway.app/api/v1
+VITE_API_BASE_URL=https://fintrack-server-production-1a30.up.railway.app/api/v1
